--- a/Phase.MsBuild/Phase.Build.targets
+++ b/Phase.MsBuild/Phase.Build.targets
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <UsingTask TaskName="Phase" AssemblyFile="$(MSBuildThisFileDirectory)bin\Debug\net471\Phase.MBuild.dll" />
-  <Target Name="PhaseCompile" AfterTargets="Build">
+  <UsingTask TaskName="Phase" AssemblyFile="$(MSBuildThisFileDirectory)Phase.MsBuild.dll" 
+             Condition="'$(Phase)' == 'true'"
+             />
+  <Target Name="PhaseCompile" AfterTargets="Build" Condition="'$(Phase)' == 'true'">
+    <Message Importance="High" Text="Starting Phase Compiler task" />
     <Phase
+         Configuration="$(Configuration)"
+         ProjectFile="$(MSBuildProjectFullPath)"
          DefineConstants="$(DefineConstants)"
          DisabledWarnings="$(NoWarn)"
          MainEntryPoint="$(StartupObject)"
          ModuleAssemblyName="$(ModuleAssemblyName)"
          Platform="$(PlatformTarget)"
          References="@(ReferencePathWithRefAssemblies)"
-         ReportAnalyzer="$(ReportAnalyzer)"
-         Resources="@(_CoreCompileResourceInputs);@(CompiledLicenseFile)"
          Sources="@(Compile)"
          TargetType="$(OutputType)"
          TreatWarningsAsErrors="$(TreatWarningsAsErrors)"
