--- a/Phase.MsBuild/Phase.MsBuild.csproj
+++ b/Phase.MsBuild/Phase.MsBuild.csproj
@@ -9,10 +9,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="15.5.180" />
+    <PackageReference Include="Microsoft.Build.Framework" Version="15.5.180" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.5.180" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Phase.Translator\Phase.Translator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Phase.Build.targets">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
 </Project>
