Added support for interpolated strings, cleaned implicit cast handling, callermember features, attributes as haxe meta, various smaller fixes.

--- a/Phase.Cli/Properties/launchSettings.json
+++ b/Phase.Cli/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "Phase.Cli": {
       "commandName": "Project",
+      "commandLineArgs": "\"D:\\Dev\\AlphaTab\\AlphaTab2\\Source\\AlphaTab.Test.Js\\AlphaTab.Test.Js.csproj\" Debug \"Any CPU\""
+    },
+    "CompileAlphaTab": {
+      "commandName": "Project",
       "commandLineArgs": "\"D:\\Dev\\AlphaTab\\AlphaTab2\\Source\\AlphaTab.JavaScript\\AlphaTab.JavaScript.csproj\" Debug \"Any CPU\""
     }
   }
