--- a/Phase.Cli/Properties/launchSettings.json
+++ b/Phase.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Phase.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\Dev\\AlphaTab\\AlphaTab2\\Source\\AlphaTab.Test.Js\\AlphaTab.Test.Js.csproj\" Debug \"Any CPU\""
+      "commandLineArgs": "\"D:\\Dev\\AlphaTab\\AlphaTab2\\Source\\AlphaTab.JavaScript\\AlphaTab.JavaScript.csproj\" Debug \"Any CPU\""
     },
     "CompileAlphaTab": {
       "commandName": "Project",
