Ensure correct assembly name, ensure correct default initializer writing, do not write NaN inlined

--- a/Phase.MsBuild/Phase.Build.targets
+++ b/Phase.MsBuild/Phase.Build.targets
@@ -10,7 +10,7 @@
          DefineConstants="$(DefineConstants)"
          DisabledWarnings="$(NoWarn)"
          MainEntryPoint="$(StartupObject)"
-         ModuleAssemblyName="$(ModuleAssemblyName)"
+         AssemblyName="$(AssemblyName)"
          Platform="$(Platform)"
          References="@(ReferencePathWithRefAssemblies)"
          Sources="@(Compile)"
